# openppp2-client

./: .gitignore  Cargo.toml  appsettings.json  build.rs  direct-list.txt  ip.txt  readme.md  rustfmt.toml
.github/: release.yml
.github/workflows/: release.yml  test.yml
src/: cli.rs  client_config.rs  main.rs  ssh_parser.rs
src/geo/: mod.rs  v2ray_config.rs
src/utils/: mod.rs
