[package]
name = "ppp-client"
version = "0.1.1"
edition = "2021"

[dependencies]
die-exit = { version = "0.5.0", features = ["red"] }
# network-interface = "1.1.3"
# protobuf = "3.4.0"
terminal-menu = "3.0.0"
json = "0.12.4"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
once_cell = "1.19.0"
log = "0.4.21"
env_logger = "0.11.3"
serde = { version = "1.0.198", features = ["derive"] }
toml = "0.8.12"
zstd = "0.13.1"

[build-dependencies]
zstd = "0.13.1"


[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
