[package]
edition = "2021"
name    = "openppp2-client"
version = "0.3.0"

[dependencies]
anyhow            = "1.0.94"
assert2           = "0.3.15"
chnroutes         = "0.1.3"
clap              = { version = "4.5.23", features = ["derive"] }
colored           = "2.1.0"
config-file2      = "0.4.0"
glob              = "0.3.1"
home              = "0.5.9"
json              = "0.12.4"
log               = "0.4.22"
once-fn           = "0.2.0"
path-absolutize   = "3.1.1"
pollster          = "0.4.0"
pretty_env_logger = "0.5.0"
serde             = { version = "1.0.216", features = ["derive"] }
terminal-menu     = "3.0.0"
toml              = "0.8.19"
zstd              = "0.13.2"
# network-interface = "1.1.3"
# protobuf = "3.4.0"

[build-dependencies]
zstd = "0.13.2"

[dev-dependencies]
tempfile = "3.14.0"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "z"
panic         = "abort"
strip         = true
